[gd_scene load_steps=11 format=2]

[ext_resource path="res://Other Resources/karma future.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Options.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Audio/Select.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.172549, 0.117647, 0.192157, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 1

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.243137, 0.231373, 0.396078, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )
width = 1

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.695652 )
colors = PoolColorArray( 0.0627451, 0.0705882, 0.109804, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )
width = 1

[node name="Options" type="Node2D"]
pause_mode = 2
visible = false
script = ExtResource( 2 )

[node name="Menu" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Menu"]
margin_left = 102.0
margin_top = 58.0
margin_right = 537.0
margin_bottom = 302.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Background"]
margin_left = 81.0
margin_top = 4.495
margin_right = 219.0
margin_bottom = 53.495
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.968627, 0.952941, 0.717647, 1 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="ColorRect" parent="Menu/Background"]
anchor_right = 1.0
margin_bottom = 3.0
color = Color( 0.968627, 0.952941, 0.717647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="ColorRect" parent="Menu/Background"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.0
color = Color( 0.968627, 0.952941, 0.717647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ColorRect" parent="Menu/Background"]
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.8147e-06
color = Color( 0.968627, 0.952941, 0.717647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="ColorRect" parent="Menu/Background"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.0
color = Color( 0.968627, 0.952941, 0.717647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resolution" type="TextureButton" parent="Menu"]
margin_left = 130.0
margin_top = 135.0
margin_right = 349.0
margin_bottom = 188.0
toggle_mode = true
texture_normal = SubResource( 3 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 7 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Resolution"]
margin_left = 4.94974
margin_top = -3.53554
margin_right = 129.95
margin_bottom = 45.4645
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.968627, 0.952941, 0.717647, 1 )
text = "Resolution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="ColorRect" parent="Menu/Resolution"]
anchor_right = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="ColorRect" parent="Menu/Resolution"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ColorRect" parent="Menu/Resolution"]
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.8147e-06
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="ColorRect" parent="Menu/Resolution"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="TextureButton" parent="Menu"]
margin_left = 390.0
margin_top = 135.0
margin_right = 507.0
margin_bottom = 188.0
toggle_mode = true
texture_normal = SubResource( 3 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 7 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Audio"]
margin_left = 4.94974
margin_top = -3.53554
margin_right = 129.95
margin_bottom = 45.4645
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.968627, 0.952941, 0.717647, 1 )
text = "Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="ColorRect" parent="Menu/Audio"]
anchor_right = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="ColorRect" parent="Menu/Audio"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ColorRect" parent="Menu/Audio"]
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.8147e-06
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="ColorRect" parent="Menu/Audio"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorials" type="TextureButton" parent="Menu"]
margin_left = 130.0
margin_top = 210.0
margin_right = 319.0
margin_bottom = 263.0
toggle_mode = true
texture_normal = SubResource( 3 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 7 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Tutorials"]
margin_left = 4.94974
margin_top = -3.53554
margin_right = 129.95
margin_bottom = 45.4645
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.968627, 0.952941, 0.717647, 1 )
text = "Tutorials"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="ColorRect" parent="Menu/Tutorials"]
anchor_right = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="ColorRect" parent="Menu/Tutorials"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ColorRect" parent="Menu/Tutorials"]
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.8147e-06
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="ColorRect" parent="Menu/Tutorials"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="TextureButton" parent="Menu"]
margin_left = 385.0
margin_top = 210.0
margin_right = 509.0
margin_bottom = 263.0
texture_normal = SubResource( 3 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 7 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Close"]
margin_left = 4.94974
margin_top = -3.53554
margin_right = 129.95
margin_bottom = 45.4645
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.968627, 0.952941, 0.717647, 1 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="ColorRect" parent="Menu/Close"]
anchor_right = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="ColorRect" parent="Menu/Close"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ColorRect" parent="Menu/Close"]
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.8147e-06
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="ColorRect" parent="Menu/Close"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" parent="." instance=ExtResource( 3 )]
[connection signal="button_up" from="Menu/Resolution" to="." method="_on_Resolution_button_up"]
[connection signal="button_up" from="Menu/Audio" to="." method="_on_Audio_button_up"]
[connection signal="button_up" from="Menu/Tutorials" to="." method="_on_Tutorials_button_up"]
[connection signal="button_up" from="Menu/Close" to="." method="_on_Close_button_up"]
